--- a/contact.html
+++ b/contact.html
@@ -590,6 +590,7 @@
                         </div>
                         <div class="info-content">
                             <h4>Location</h4>
+<br>
                             <p>No. 95/B, Dikhengama, Munagama, Horana, 12400, Sri Lanka</p>
                         </div>
                     </div>
@@ -598,7 +599,7 @@
                             <i class="fas fa-phone-alt"></i>
                         </div>
                         <div class="info-content">
-                            <h4>Phone</h4>
+                            <h4>Phone</h4><br>
                             <p><a href="tel:+94716155666">0716155666</a></p>
                         </div>
                     </div>
@@ -607,7 +608,7 @@
                             <i class="fas fa-envelope"></i>
                         </div>
                         <div class="info-content">
-                            <h4>Email</h4>
+                            <h4>Email</h4><br>
             
                             <p><a href="mailto:isaradilnuka513@gmail.com">isaradilnuka513@gmail.com</a></p>
                         </div>
