--- a/contact.html
+++ b/contact.html
@@ -591,7 +591,7 @@
                         <div class="info-content">
                             <h4>Location</h4>
 <br>
-                            <p>No. 95/B, Dikhengama, Munagama, Horana, 12400, Sri Lanka</p>
+                            <p>Dikhengama, Munagama, Horana, 12400, Sri Lanka</p>
                         </div>
                     </div>
                     <div class="info-item">
